publishes reimagine possible stories

--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -86,7 +86,7 @@
 
 
   <div id="possible-cards">
-    
+
     <section class="introduction" id="introduction">
   <div class="container">
     <div class="row">
@@ -172,7 +172,7 @@
 
   })
 </script>
-    
+
     <section id="improving-health-in-colorado" class="health-in-colorado">
   <div class="container">
     <div class="row">
@@ -187,8 +187,6 @@
     </div>
   </div>
 </section>
-  
-    <!--  -->
     <section class="white-background-right-photo" id="reimagine-higher-education">
   <div class="container">
     <h2>What’s <span class="possible-word">possible</span> when you reimagine higher education?</h2>
@@ -237,7 +235,7 @@
     </div>
   </div>
 </section>
-    <!-- <section id="on-the-front-lines-of-cybersecurity">
+    <section id="on-the-front-lines-of-cybersecurity">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -247,8 +245,8 @@
       </div>
     </div>
   </div>
-</section> -->
-    <!-- <section id="brewing-innovation-in-hospitality">
+</section>
+    <section id="brewing-innovation-in-hospitality">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -258,7 +256,7 @@
       </div>
     </div>
   </div>
-</section> -->
+</section>
     <section id="teaching-tomorrows-teachers" class="teaching-tomorrows-teachers-section">
   <div class="container">
     <div class="row">
@@ -292,7 +290,7 @@
     </div>
   </div>
 </section>
-    <!-- <section id="operating-satelites-from-the-classroom">
+    <section id="operating-satelites-from-the-classroom">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -306,8 +304,8 @@
       </div>
     </div>
   </div>
-</section> -->
-    <!-- <section id="multiply-your-roi">
+</section>
+    <section id="multiply-your-roi">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -319,7 +317,7 @@
       </div>
     </div>
   </div>
-</section> -->
+</section>
     <!-- <section id="saving-endangered-languages">
   <div class="container">
     <div class="row">
@@ -400,24 +398,24 @@
   </div>
 
 
-    <div class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-6 text-center">
-            <a href="https://msudenver.edu"><img class="img-fluid university-logo-footer" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg"></a>
-          </div>
-          <div class="col-sm-12 col-md-6">
-            <h2 class="possible-footer">Reimagine <span class="possible-word">possible</span></h2>
-          </div>
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6 text-center">
+          <a href="https://msudenver.edu"><img class="img-fluid university-logo-footer" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg"></a>
         </div>
-        <div class="row justify-content-end">
-          <div class="col-sm-12 col-md-8 offset-col-md-4">
-            <p class="copyright">&copy; 2019 <a href="https://msudenver.edu">Metropolitan State University of Denver</a>. All rights reserved.</p>
-          </div>
+        <div class="col-sm-12 col-md-6">
+          <h2 class="possible-footer">Reimagine <span class="possible-word">possible</span></h2>
+        </div>
+      </div>
+      <div class="row justify-content-end">
+        <div class="col-sm-12 col-md-8 offset-col-md-4">
+          <p class="copyright">&copy; 2019 <a href="https://msudenver.edu">Metropolitan State University of Denver</a>. All rights reserved.</p>
         </div>
       </div>
     </div>
-    <!-- <script src="style-assets/lib/jquery/jquery.min.js"></script>
+  </div>
+  <!-- <script src="style-assets/lib/jquery/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js "></script> -->
 
