--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -43,23 +43,21 @@
 
 
   <div id="possible-cards">
-    
+
     @@include('possible/introduction.html')
     @@include('possible/possible-movie.html')
 
     @@include('possible/dropdown-navbar.html')
-    
+
     @@include('possible/improving-health-in-colorado.html')
-  
-    <!-- @@include('possible/side-navigation.html') -->
     @@include('possible/reimagine-higher-education.html')
     @@include('possible/master-your-future.html')
-    <!-- @@include('possible/on-the-front-lines-of-cybersecurity.html') -->
-    <!-- @@include('possible/brewing-innovation-in-hospitality.html') -->
+    @@include('possible/on-the-front-lines-of-cybersecurity.html')
+    @@include('possible/brewing-innovation-in-hospitality.html')
     @@include('possible/teaching-tomorrows-teachers.html')
     @@include('possible/learners-connect-with-leaders.html')
-    <!-- @@include('possible/operating-satelites-from-the-classroom.html') -->
-    <!-- @@include('possible/multiply-your-roi.html') -->
+    @@include('possible/operating-satelites-from-the-classroom.html')
+    @@include('possible/multiply-your-roi.html')
     <!-- @@include('possible/saving-endangered-languages.html') -->
     <!-- @@include('possible/white-background-right-photo.html') -->
     <!-- @@include('possible/background-right-copy.html') -->
@@ -69,24 +67,24 @@
   </div>
 
 
-    <div class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-6 text-center">
-            <a href="https://msudenver.edu"><img class="img-fluid university-logo-footer" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg"></a>
-          </div>
-          <div class="col-sm-12 col-md-6">
-            <h2 class="possible-footer">Reimagine <span class="possible-word">possible</span></h2>
-          </div>
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6 text-center">
+          <a href="https://msudenver.edu"><img class="img-fluid university-logo-footer" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg"></a>
         </div>
-        <div class="row justify-content-end">
-          <div class="col-sm-12 col-md-8 offset-col-md-4">
-            <p class="copyright">&copy; 2019 <a href="https://msudenver.edu">Metropolitan State University of Denver</a>. All rights reserved.</p>
-          </div>
+        <div class="col-sm-12 col-md-6">
+          <h2 class="possible-footer">Reimagine <span class="possible-word">possible</span></h2>
+        </div>
+      </div>
+      <div class="row justify-content-end">
+        <div class="col-sm-12 col-md-8 offset-col-md-4">
+          <p class="copyright">&copy; 2019 <a href="https://msudenver.edu">Metropolitan State University of Denver</a>. All rights reserved.</p>
         </div>
       </div>
     </div>
-    <!-- <script src="style-assets/lib/jquery/jquery.min.js"></script>
+  </div>
+  <!-- <script src="style-assets/lib/jquery/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js "></script> -->
 
