final publish for v4 www.msudenver.edu and final possible 19-09-10

--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -29,11 +29,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="style-assets/css/possible.css" />
 
-  <!-- <t4 type='media' id='172853' formatter='image/path'/> background section
-<t4 type='media' id='172852' formatter='image/path'/> Pride photo
-<t4 type='media' id='117285' formatter='image/path'/> Logo
-
- -->
   <!-- google analytics -->
 <!-- GTM fireGtm variable -->
 <script type="text/javascript">
@@ -81,12 +76,9 @@
 
 </head>
 
-
 <body style{position: relative;} data-spy="scroll" data-target="#navbar-possible" data-offset="100">
 
-
   <div id="possible-cards">
-
     <section class="introduction" id="introduction">
   <div class="container">
     <div class="row">
@@ -105,17 +97,12 @@
   </div>
 </section>
     <section id="possible-movie" class="possible-movie">
-  <div class="movie-section">
+  <div class="container movie-section">
     <iframe src="https://player.vimeo.com/video/357426966" frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen>
     </iframe>
   </div>
 </section>
-
-    
-<div class="navbar-wrapper blue-background">
-
-<!-- <div class="navbar-wrapper blue-background" style="display: none;"> -->
-  <!-- <nav id="navbar-possible" class="navbar navbar-fixed-top navbar-expand-md" data-toggle="collapse" data-target="navbar-inner"> -->
+    <div class="navbar-wrapper blue-background">
   <nav id="navbar-possible" class="navbar navbar-expand-md" data-toggle="collapse" data-target="navbar-inner">
     <div class="row">
       <div class="col-xs-12 col-md-8">
@@ -140,20 +127,15 @@
 
       <div class="col-xs-12 col-md-4 d-none d-lg-block">
         <div class="row" style="padding-right:15px;">
-          <a class="col-xs-12 col-md-6 " href="https://connect.msudenver.edu/register/requestinformation" target="_blank"><button class="btn" style="font-size: 1rem; padding: 10px; border: solid 3px #fff; width:100% ">Information</button></a>
-          <a class="col-xs-12 col-md-6" href="/apply" target="_blank"><button class="btn" style="font-size: 1rem; padding: 10px; border: solid 3px #fff; width:100%">Apply</button></a>
+          <a class="col-xs-12 col-md-6 " href="https://connect.msudenver.edu/register/requestinformation?utm_source=possible-landing-page&utm_medium=direct-rp&utm_campaign=reimagine-possible&utm_term=request-info" target="_blank"><button class="btn"
+              style="font-size: 1rem; padding: 10px; border: solid 3px #fff; width:100% ">Request Information</button></a>
+          <a class="col-xs-12 col-md-6" href="https://msudenver.edu/apply/?utm_source=possible-landing-page&utm_medium=direct-rp&utm_campaign=reimagine-possible&utm_term=request-info" target="_blank"><button class="btn"
+              style="font-size: 1rem; padding: 10px; border: solid 3px #fff; width:100%">Apply</button></a>
         </div>
       </div>
-
     </div>
-
   </nav>
 </div>
-
-<style>
-
-</style>
-
 <script type="text/javascript">
   const droptext = document.getElementById('nav-showing')
 
@@ -172,7 +154,6 @@
 
   })
 </script>
-
     <section id="improving-health-in-colorado" class="health-in-colorado">
   <div class="container">
     <div class="row">
@@ -235,7 +216,7 @@
     </div>
   </div>
 </section>
-    <section id="on-the-front-lines-of-cybersecurity">
+    <!-- <section id="on-the-front-lines-of-cybersecurity">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -245,8 +226,8 @@
       </div>
     </div>
   </div>
-</section>
-    <section id="brewing-innovation-in-hospitality">
+</section> -->
+    <!-- <section id="brewing-innovation-in-hospitality">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -256,14 +237,14 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
     <section id="teaching-tomorrows-teachers" class="teaching-tomorrows-teachers-section">
   <div class="container">
     <div class="row">
       <div class="well col-xs-12">
         <h2>Teaching tomorrow’s teachers.</h2>
         <h3>A leading provider of diverse, classroom-ready graduates with a passion to serve Colorado children.</h3>
-        <p>Called to <a href="https://red.msudenver.edu/2019/third-gen-teacher-speaks-kids-language.html">teach bilingual students</a>? Need a <a href="https://www.msudenver.edu/teachergrad/">master’s degree</a> to advance in your career? Want to
+        <p>Called to <a href="https://red.msudenver.edu/2019/third-gen-teacher-speaks-kids-language.html">teach bilingual students</a>? Need a <a href="https://www.msudenver.edu/teachergrad/">master’s degree</a> to advance your career? Want to
           <a href="https://red.msudenver.edu/2019/making-dreams-possible.html">open your own school</a>? Whether you’re a <a href="https://red.msudenver.edu/2019/bound-to-educate.html">first-generation student interested in early childhood
             education</a> or a <a href="https://red.msudenver.edu/2017/fit-for-duty-the-veterans-who-teach-pe.html"> veteran going back to school to teach physical education</a>, you’ll get to the head of the class at MSU Denver.</p>
       </div>
@@ -290,7 +271,7 @@
     </div>
   </div>
 </section>
-    <section id="operating-satelites-from-the-classroom">
+    <!-- <section id="operating-satelites-from-the-classroom">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -304,8 +285,8 @@
       </div>
     </div>
   </div>
-</section>
-    <section id="multiply-your-roi">
+</section> -->
+    <!-- <section id="multiply-your-roi">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -317,64 +298,7 @@
       </div>
     </div>
   </div>
-</section>
-    <!-- <section id="saving-endangered-languages">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <h2>Our students are saving endangered languages.</h2>
-        <h3>Our anthropology and linguistics students are on the ground in Central America working to preserve a disappearing Mayan language.</h3>
-        <p>Ch’orti’ is in danger of extinction. But MSU Denver <a href="https://www.msudenver.edu/soc/">anthropology</a> and <a href="https://www.msudenver.edu/programs/linguistics-major-ba.shtml">linguistics</a> 
-          students are working with local institutions in Guatemala and Honduras to make sure the threatened language doesn’t vanish.
-            Their work is one of several interdisciplinary research projects conducted by the University’s innovative <a href="https://www.msudenver.edu/soc/anthropology/ethnographylab/">Ethnography Lab.</a></p>
-      </div>
-    </div>
-  </div>
 </section> -->
-    <!-- <section class="white-background-right-photo">
-  <div class="container">
-    <h2 style="margin-bottom:30px;">white-background-right-photo<span class="possible-word">possible</span></h2>
-    <div class="row">
-      <div class="col-xs-12 col-md-6">
-        <p>white-background-right-photo white-background-right-photo white-background-right-photo white-background-right-photo white-background-right-photo white-background-right-photo white-background-right-photo white-background-right-photo
-          white-background-right-photo white-background-right-photo white-background-right-photo </p>
-      </div>
-      <div class="col-xs-12 col-md-6">
-        <img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
-      </div>
-    </div>
-  </div>
-</section> -->
-    <!-- <section class="background-right-copy">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12 col-md-7 offset-md-5 well">
-        <h2>What’s <span class="possible-word">possible</span> when you reimagine higher education?</h2>
-        <h4><i>
-            A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.
-          </i></h4>
-        <p>
-          Build and operate satellites at an innovative aerospace company. Make beer at a legendary brewery. Produce an Emmy-winning newscast. All without leaving campus. Plus, our downtown location provides unparalleled access to internships and
-          networks that jump-start careers. Just ask this “SportsCenter” anchor. The possibilities are endless. </p>
-        <p style="margin-bottom:20px"> <strong>The possibilities are endless.</strong></p>
-
-      </div>
-    </div>
-  </div>
-</section> -->
-    <!-- <section class="blue-background" id="start">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-8 offset-md-4">
-        <h2>Lorem Ipsum <span class="possible-word">possible</span> ?</h2>
-      </div>
-      <div class="col-xs-12 col-md-8 offset-md-4">
-        <p>Imagine a place where barriers are removed, opportunities are plentiful, labels are nonexistent and an entire community of peers, mentors, educators and industry leaders is ready to support you, encourage you and connect with you.</p>
-      </div>
-    </div>
-  </div>
-</section> -->
-
     <section class="possible-call-to-action">
   <div class="container">
     <div class="row">
@@ -389,15 +313,14 @@
           arrive here and who are discovering their own
           possible every day.</p>
         <p style="margin-bottom:20px"> <strong>Ready to find your possible?</strong></p>
-        <a href="https://connect.msudenver.edu/register/requestinformation" target="_blank"><button class="col-xs-12 col-md-5 offset-md-1 btn">Request information</button></a>
-        <a href="/apply" target="_blank"><button class="col-xs-12 col-md-5 btn">Apply to MSU Denver</button></a>
+        <a href="https://connect.msudenver.edu/register/requestinformation?utm_source=possible-landing-page&utm_medium=direct-rp&utm_campaign=reimagine-possible&utm_term=request-info" target="_blank"><button
+            class="col-xs-12 col-md-5 offset-md-1 btn">Request information</button></a>
+        <a href="https://msudenver.edu/apply/?utm_source=possible-landing-page&utm_medium=direct-rp&utm_campaign=reimagine-possible&utm_term=request-info" target="_blank"><button class="col-xs-12 col-md-5 btn">Apply to MSU Denver</button></a>
       </div>
     </div>
   </div>
 </section>
   </div>
-
-
   <div class="footer">
     <div class="container">
       <div class="row">
@@ -420,44 +343,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js "></script> -->
 
 </body>
-
-
-<!--
-The MIT License (MIT)
-
-Copyright (c) 2016 Thomas Grainger.
-
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in
-all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-THE SOFTWARE.
-
-
-Portions of this wow.js Software may utilize the following copyrighted material, the use of which is hereby acknowledged.
-
-WOW: https://github.com/matthieua/WOW/tree/20848c410fe32d161c2330e1d261b59512094f81
-
-Copyright (C) 2014; Matthieu Aussaguel
-
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
--->
 
 
 </html>
