--- a/www-root/1column-vendor.html
+++ b/www-root/1column-vendor.html
@@ -18,7 +18,7 @@
   <div class="navbar-fixed-top">
     <div class="col-xs-12 col-md-6 col-md-push-6">
       <a href="https://msudenver.edu">
-        <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage">
+        <img class="msudenver_logo" src="https://www.msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage">
       </a>
     </div>
     <div class="container">
