added the pictures to the rest of the possible stories

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -42,12 +42,12 @@
     @@include('possible/improving-health-in-colorado.html')
     @@include('possible/reimagine-higher-education.html')
     @@include('possible/master-your-future.html')
-    <!-- @@include('possible/on-the-front-lines-of-cybersecurity.html') -->
-    <!-- @@include('possible/brewing-innovation-in-hospitality.html') -->
+    @@include('possible/on-the-front-lines-of-cybersecurity.html')
+    @@include('possible/brewing-innovation-in-hospitality.html')
     @@include('possible/teaching-tomorrows-teachers.html')
     @@include('possible/learners-connect-with-leaders.html')
-    <!-- @@include('possible/operating-satelites-from-the-classroom.html') -->
-    <!-- @@include('possible/multiply-your-roi.html') -->
+    @@include('possible/operating-satelites-from-the-classroom.html')
+    @@include('possible/multiply-your-roi.html')
     @@include('possible/call-to-action.html')
   </div>
   <div class="footer">
