--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -102,6 +102,7 @@
     </iframe>
   </div>
 </section>
+
     <div class="navbar-wrapper blue-background">
   <nav id="navbar-possible" class="navbar navbar-expand-md" data-toggle="collapse" data-target="navbar-inner">
     <div class="row">
@@ -112,17 +113,20 @@
             <li class="nav-item dropdown">
               <a id='nav-showing' class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Choose</a>
               <div class="dropdown-menu">
+                <a class="dropdown-item" href="#introduction" hidden>Top</a>
                 <a class="dropdown-item" href="#possible-movie" hidden>Video</a>
+
                 <a class="dropdown-item" href="#improving-health-in-colorado">Improving health in Colorado</a>
                 <a class="dropdown-item" href="#reimagine-higher-education">Reimagine higher education</a>
                 <a class="dropdown-item" href="#master-your-future">Master your future</a>
-                <a class="dropdown-item" href="#on-the-front-lines-of-cybersecurity">Cybersecurity</a>
                 <a class="dropdown-item" href="#brewing-innovation-in-hospitality">Brewing innovation in hospitality</a>
-                <a class="dropdown-item" href="#teaching-tomorrows-teachers">Teaching tomorrow's teachers</a>
-                <a class="dropdown-item" href="#learners-connect-with-leaders">Learners connect with leaders</a>
-                <a class="dropdown-item" href="#operating-satelites-from-the-classroom">Operate satelites</a>
                 <a class="dropdown-item" href="#multiply-your-roi">Multiply Your Roi</a>
-                <a class="dropdown-item" href="#introduction" hidden>Top</a>
+                <a class="dropdown-item" href="#on-the-front-lines-of-cybersecurity">Cybersecurity</a>
+                <a class="dropdown-item" href="#learners-connect-with-leaders">Learners connect with leaders</a>
+                <a class="dropdown-item" href="#teaching-tomorrows-teachers">Teaching tomorrow's teachers</a>
+                <a class="dropdown-item" href="#operating-satelites-from-the-classroom">Operate satelites</a>
+
+
               </div>
             </li>
           </ul>
@@ -154,6 +158,7 @@
     }
   })
 </script>
+    
     <section id="improving-health-in-colorado" class="health-in-colorado">
   <div class="container">
     <div class="row">
@@ -216,40 +221,45 @@
     </div>
   </div>
 </section>
-    <section id="on-the-front-lines-of-cybersecurity" class="on-the-front-lines-of-cybersecurity">
+    <section id="brewing-innovation-in-hospitality" class="brewing-innovation-in-hospitality">
   <div class="container">
+    <div class="col-xs-12 well">
+    <h2>Brewing innovation at our School of Hospitality.</h2>
+    <h3>Hands-on experience at Colorado’s only on-campus hotel, brewery and wine-cellar management lab.</h3>
+
+    <!-- <div class="col-xs-12 col-md-6"> -->
+      <br><br><p>Whether it’s <a href="https://red.msudenver.edu/2017/homeless-to-homebrewing-peters-never-quits.html">founding a brewery</a> or being tapped for a <a href="https://red.msudenver.edu/2017/on-a-highway-to-ale.html">career with Coors</a>, students can <a href="https://www.msudenver.edu/beer/">craft their own futures</a> at MSU Denver. And Roadrunners don’t just excel in <a href="https://red.msudenver.edu/2019/beer-here.html">Colorado’s booming beer industry;</a> they work with industry leaders to <a href="https://red.msudenver.edu/2019/turning-up-the-heat.html">serve up delicious dishes</a>, ensure <a href="https://red.msudenver.edu/2019/ohana-in-action.html">five-star hotel stays</a> and even <a href="https://red.msudenver.edu/2017/props-for-an-out-of-this-world-event.html">launch events for the aerospace industry.</a></p>
+    </div>
+    <!-- <div class="col-xs-12 col-md-6">
+      <img class="img-thumbnail" src="style-assets/media/possible/abby-brewing.jpg">
+    </div> -->
+
+  </div>
+</section>
+    <section id="multiply-your-roi">
+  <div class="container">
+    <h2>Best ROI in the business.</h2>
+    <h3>Our internationally accredited business college offers the best value in Colorado, a startup spirit and the only sales center in the state.</h3>
+
     <div class="row">
-      <div class="col-xs-12 col-md-8 offset-md-5 well">
-        <h2>On the front lines of cybersecurity.</h2>
-        <h3>Our groundbreaking program taught by industry experts blends technology and human behavior to advance careers in this critical field.</h3>
-        <p>Understanding technology isn’t all it takes to stay ahead of the bad guys. Our <a href="https://www.msudenver.edu/programs/cybersecurity-major-bs.shtml">bachelor’s</a> and <a href="https://www.msudenver.edu/programs/master-of-science-in-cybersecurity.shtml">master’s</a> degrees give students the tools they need to excel in the field and the skills to decode the human behavior behind cybercrimes. How? <a href="http://red.msudenver.edu/2019/fighting-crime-from-the-classroom.html">Professors with real-world expertise</a> and hands-on learning opportunities that lead to top careers.</p>
+      <div class="col-xs-12 col-md-6">
+        <br><br><p>Just one year after graduation, alumni of our <a href="https://www.msudenver.edu/business/">College of Business</a> earn close to 40% more than they paid for four years of tuition. 
+          That’s the best ROI of any <a href="https://www.msudenver.edu/business/about/">AACSB-accredited</a> university in Colorado. 
+          Add that to our first-rate faculty and you’ll be ready to <a href="https://red.msudenver.edu/2019/opportunities-in-store.html">open your dream franchise</a>, <a href="https://red.msudenver.edu/2019/watch-brewing-success.html">brewery</a> or hotel in no time.</p>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <img class="img-thumbnail" src="style-assets/media/possible/MBA.jpg">
       </div>
     </div>
   </div>
 </section>
-    <section id="brewing-innovation-in-hospitality" class="brewing-innovation-in-hospitality">
-  <div class="container">
-    <h2>Brewing innovation at our School of Hospitality.</h2>
-    <h3>Hands-on experience at Colorado’s only on-campus hotel, brewery and wine-cellar management lab.</h3>
-
-    <div class="col-xs-12 col-md-6">
-      <br><br><p>Whether it’s <a href="https://red.msudenver.edu/2017/homeless-to-homebrewing-peters-never-quits.html">founding a brewery</a> or being tapped for a <a href="https://red.msudenver.edu/2017/on-a-highway-to-ale.html">career with Coors</a>, students can <a href="https://www.msudenver.edu/beer/">craft their own futures</a> at MSU Denver. And Roadrunners don’t just excel in <a href="https://red.msudenver.edu/2019/beer-here.html">Colorado’s booming beer industry;</a> they work with industry leaders to <a href="https://red.msudenver.edu/2019/turning-up-the-heat.html">serve up delicious dishes</a>, ensure <a href="https://red.msudenver.edu/2019/ohana-in-action.html">five-star hotel stays</a> and even <a href="https://red.msudenver.edu/2017/props-for-an-out-of-this-world-event.html">launch events for the aerospace industry.</a></p>
-    </div>
-    <div class="col-xs-12 col-md-6">
-      <img class="img-thumbnail" src="style-assets/media/possible/abby-brewing.jpg">
-    </div>
-
-  </div>
-</section>
-    <section id="teaching-tomorrows-teachers" class="teaching-tomorrows-teachers-section">
+    <section id="on-the-front-lines-of-cybersecurity" class="on-the-front-lines-of-cybersecurity">
   <div class="container">
     <div class="row">
-      <div class="well col-xs-12">
-        <h2>Teaching tomorrow’s teachers.</h2>
-        <h3>A leading provider of diverse, classroom-ready graduates with a passion to serve Colorado children.</h3>
-        <p>Called to <a href="https://red.msudenver.edu/2019/third-gen-teacher-speaks-kids-language.html">teach bilingual students</a>? Need a <a href="https://www.msudenver.edu/teachergrad/">master’s degree</a> to advance your career? Want to
-          <a href="https://red.msudenver.edu/2019/making-dreams-possible.html">open your own school</a>? Whether you’re a <a href="https://red.msudenver.edu/2019/bound-to-educate.html">first-generation student interested in early childhood
-            education</a> or a <a href="https://red.msudenver.edu/2017/fit-for-duty-the-veterans-who-teach-pe.html"> veteran going back to school to teach physical education</a>, you’ll get to the head of the class at MSU Denver.</p>
+      <div class="col-xs-12 col-md-7 well">
+        <h2>On the front lines of cybersecurity.</h2>
+        <h3>Our groundbreaking program taught by industry experts blends technology and human behavior to advance careers in this critical field.</h3>
+        <p>Understanding technology isn’t all it takes to stay ahead of the bad guys. Our <a href="https://www.msudenver.edu/programs/cybersecurity-major-bs.shtml">bachelor’s</a> and <a href="https://www.msudenver.edu/programs/master-of-science-in-cybersecurity.shtml">master’s</a> degrees give students the tools they need to excel in the field and the skills to decode the human behavior behind cybercrimes. How? <a href="http://red.msudenver.edu/2019/fighting-crime-from-the-classroom.html">Professors with real-world expertise</a> and hands-on learning opportunities that lead to top careers.</p>
       </div>
     </div>
   </div>
@@ -274,6 +284,19 @@
     </div>
   </div>
 </section>
+    <section id="teaching-tomorrows-teachers" class="teaching-tomorrows-teachers-section">
+  <div class="container">
+    <div class="row">
+      <div class="well col-xs-12">
+        <h2>Teaching tomorrow’s teachers.</h2>
+        <h3>A leading provider of diverse, classroom-ready graduates with a passion to serve Colorado children.</h3>
+        <p>Called to <a href="https://red.msudenver.edu/2019/third-gen-teacher-speaks-kids-language.html">teach bilingual students</a>? Need a <a href="https://www.msudenver.edu/teachergrad/">master’s degree</a> to advance your career? Want to
+          <a href="https://red.msudenver.edu/2019/making-dreams-possible.html">open your own school</a>? Whether you’re a <a href="https://red.msudenver.edu/2019/bound-to-educate.html">first-generation student interested in early childhood
+            education</a> or a <a href="https://red.msudenver.edu/2017/fit-for-duty-the-veterans-who-teach-pe.html"> veteran going back to school to teach physical education</a>, you’ll get to the head of the class at MSU Denver.</p>
+      </div>
+    </div>
+  </div>
+</section>
     <section id="operating-satelites-from-the-classroom">
   <div class="container">
     <h2>We’re operating satellites from the classroom.</h2>
@@ -292,23 +315,7 @@
 
   </div>
 </section>
-    <section id="multiply-your-roi">
-  <div class="container">
-    <h2>Best ROI in the business.</h2>
-    <h3>Our internationally accredited business college offers the best value in Colorado, a startup spirit and the only sales center in the state.</h3>
-
-    <div class="row">
-      <div class="col-xs-12 col-md-6">
-        <br><br><p>Just one year after graduation, alumni of our <a href="https://www.msudenver.edu/business/">College of Business</a> earn close to 40% more than they paid for four years of tuition. 
-          That’s the best ROI of any <a href="https://www.msudenver.edu/business/about/">AACSB-accredited</a> university in Colorado. 
-          Add that to our first-rate faculty and you’ll be ready to <a href="https://red.msudenver.edu/2019/opportunities-in-store.html">open your dream franchise</a>, <a href="https://red.msudenver.edu/2019/watch-brewing-success.html">brewery</a> or hotel in no time.</p>
-      </div>
-      <div class="col-xs-12 col-md-6">
-        <img class="img-thumbnail" src="style-assets/media/possible/MBA.jpg">
-      </div>
-    </div>
-  </div>
-</section>
+    
     <section class="possible-call-to-action">
   <div class="container">
     <div class="row">
