reordered right-aligned images to properly come after the h3 on mobile, but stay aligned on medium+ sized devices

--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -180,7 +180,10 @@
       A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.
     </h3>
     <div class="row">
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-6 order-md-12">
+        <img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
+      </div>
+      <div class="col-xs-12 col-md-6 order-md-1">
         <p></p>
         <p></p>
         <p>
@@ -190,9 +193,7 @@
           networks that jump-start careers. Just ask this <a href="https://red.msudenver.edu/2019/so-you-want-to-host-sportscenter.html">“SportsCenter” anchor</a>.</p>
         <h4>The possibilities are endless.</h4>
       </div>
-      <div class="col-xs-12 col-md-6">
-        <img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
-      </div>
+      
     </div>
   </div>
 </section>
@@ -242,14 +243,15 @@
     <h3>Our internationally accredited business college offers the best value in Colorado, a startup spirit and the only sales center in the state.</h3>
 
     <div class="row">
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-6 order-md-12">
+          <img class="img-thumbnail" src="style-assets/media/possible/MBA.jpg">
+      </div>
+      <div class="col-xs-12 col-md-6 order-md-1">
         <br><br><p>Just one year after graduation, alumni of our <a href="https://www.msudenver.edu/business/">College of Business</a> earn close to 40% more than they paid for four years of tuition. 
           That’s the best ROI of any <a href="https://www.msudenver.edu/business/about/">AACSB-accredited</a> university in Colorado. 
           Add that to our first-rate faculty and you’ll be ready to <a href="https://red.msudenver.edu/2019/opportunities-in-store.html">open your dream franchise</a>, <a href="https://red.msudenver.edu/2019/watch-brewing-success.html">brewery</a> or hotel in no time.</p>
       </div>
-      <div class="col-xs-12 col-md-6">
-        <img class="img-thumbnail" src="style-assets/media/possible/MBA.jpg">
-      </div>
+
     </div>
   </div>
 </section>
