--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -204,7 +204,10 @@
       <h3>Master’s degrees in business, health, teaching and technology designed to advance your career and community.</h3>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-6 order-md-12">
+        <img class="img-thumbnail" src="style-assets/media/possible/MockTrial.jpg">
+      </div>
+      <div class="col-xs-12 col-md-6 order-md-1">
         <div class="copy-swap">
           <p>Advance your community – and career – with an <a href="https://www.msudenver.edu/graduate-studies/"> advanced degree</a> in a critical Colorado field: <a
               href="https://www.msudenver.edu/programs/master-of-business-administration-mba.shtml">business administration</a>, <a href="https://www.msudenver.edu/programs/master-of-professional-accountancy-mpacc.shtml">accounting</a>, <a
@@ -216,9 +219,7 @@
               mind</a>.</p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6 ">
-        <img class="img-thumbnail" src="style-assets/media/possible/MockTrial.jpg">
-      </div>
+
     </div>
   </div>
 </section>
