fixed broken hero image link

--- a/www-root/2column.html
+++ b/www-root/2column.html
@@ -237,7 +237,7 @@ $(window).scroll(function(){
  
           <div class="row">
   <div class="col-xs-12 hero">
-  <img class="img-responsive" src="http://msudenver.edu/media/content/departmentofjournalismamptechnicalcommunication/images/JTC-Hero-v2.jpg" alt="work study help desk" style="   " />
+  <img class="img-responsive" src="https://www.msudenver.edu/media/marketingandcommunications/brandcentral/images/BC-Hero-final.jpg" alt="work study help desk" style="   " />
     <div class="hero-caption"><h3>Body of Page Hero Image Content Type</h3>
   <p>Praesent mauris. Fusce nec tellus sed augue semper porta.</p></div>
   </div>
